Browserify で client側の broccoli.js にもフィールドを読み込むようにした。

--- a/tests/baobab/frontend/index.html
+++ b/tests/baobab/frontend/index.html
@@ -16,7 +16,7 @@
 		<!-- broccoli -->
 		<script src="./broccoli.js"></script>
 		<script type="text/javascript">
-			// console.log(broccoli);
+			console.log(broccoli);
 
 /**
  * main.js
