drawCanvas() 改め、 drawPalette() の骨格実装。

--- a/tests/baobab/frontend/editpage/index.html
+++ b/tests/baobab/frontend/editpage/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>sample page</title>
+        <style media="screen">
+            img{max-width:100%;}
+        </style>
     </head>
     <body>
         <h1>sample page</h1>
