--- a/tests/baobab/frontend/index.html
+++ b/tests/baobab/frontend/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Broccoli TEST</title>
+		<link rel="stylesheet" href="./broccoli.css" />
+		<link rel="stylesheet" href="./index_files/css.css" />
 	</head>
 	<body>
 		<div class="canvas">
@@ -12,7 +14,7 @@
 		<div id="palette">module palette.</div>
 
 		<!-- jQuery -->
-		<script src="jquery-1.11.1.min.js" type="text/javascript"></script>
+		<script src="./index_files/jquery-1.11.1.min.js" type="text/javascript"></script>
 
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
@@ -22,78 +24,11 @@
 
 		<!-- broccoli -->
 		<script src="./broccoli.js"></script>
+
+		<!-- main.js -->
+		<script src="./index_files/main.js" type="text/javascript"></script>
 		<script type="text/javascript">
-			// console.log(broccoli);
-
-/**
- * main.js
- */
-window.main = new (function(){
-	var _this = this;
-	var socket = this.socket = window.baobabFw
-		.createSocket(
-			this,
-			io,
-			{
-				'showSocketTest': function( data, callback, main, socket ){
-					// console.log(data);
-					// alert(data.message);
-					// console.log(callback);
-					callback(data);
-					return;
-				}
-			}
-		)
-	;
-
-	this.init = function(){
-		// this.socketTest();
-		_this.socket.send(
-			'broccoli',
-			{
-				'api': 'getPackageList'
-			},
-			function(packageList){
-				console.log(packageList);
-				broccoli.drawModulePalette(packageList, document.getElementById('palette'), function(){
-					console.log('palette standby.');
-
-					_this.socket.send(
-						'broccoli',
-						{
-							'api': 'buildHtml'
-						},
-						function(html){
-							// console.log(html);
-							$('.contents', $('iframe').get(0).contentWindow.document).html(html);
-
-							console.log('HTML standby.');
-						}
-					);
-
-				});
-			}
-		);
-	}
-
-	/**
-	 * WebSocket疎通確認
-	 */
-	this.socketTest = function(){
-		socket.send(
-			'socketTest',
-			{'message': 'socketTest from frontend.'} ,
-			function(data){
-				console.log(data);
-				// alert('callback function is called!');
-			}
-		);
-		return this;
-	}
-
-})();
-main.init();
-
+			main.init();
 		</script>
 	</body>
 </html>
