インターフェイスの仕様を見直し中

--- a/tests/baobab/frontend/editpage/index.html
+++ b/tests/baobab/frontend/editpage/index.html
@@ -9,8 +9,11 @@
     </head>
     <body>
         <h1>sample page</h1>
-        <div class="contents">
-            contents...
+        <div class="contents" data-contents="main">
+            main contents...
+        </div>
+        <div class="contents" data-contents="secondly">
+            secondly contents...
         </div>
     </body>
 </html>
