--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -7,11 +7,8 @@
 		<link rel="stylesheet" href="./index_files/css.css" />
 	</head>
 	<body>
-		<div class="canvas">
-			<iframe src="/editpage/index.html"></iframe>
-			<div id="panels"></div>
-		</div>
-		<div id="palette">module palette.</div>
+		<div class="canvas" data-broccoli-preview="/editpage/index.html"></div>
+		<div class="palette">...</div>
 
 		<!-- jQuery -->
 		<script src="./index_files/jquery-1.11.1.min.js" type="text/javascript"></script>
