--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>sample page</title>
         <style media="screen">
             img{max-width:100%;}
@@ -9,9 +9,11 @@
     </head>
     <body>
         <h1>sample page</h1>
+        <h2>main</h2>
         <div class="contents" data-contents="main">
             main contents...
         </div>
+        <h2>secondly</h2>
         <div class="contents" data-contents="secondly">
             secondly contents...
         </div>
