loopフィールドがサブモジュールを使えるようになった。
- しかし、劇的に重くなった・・・。(汗)

--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -31,36 +31,18 @@
 </div><!-- / .cols -->
 <div class="unit thumb_list">
 	<ul>
-<div class="unit thumb_list">
-	<ul>
 
-	</ul>
-</div><!-- /.thumb_list -->
-<div class="unit thumb_list">
-	<ul>
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./test1_files/resources/ea3610c827341dafa4820ac9b168659c.undefined" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
 
-	</ul>
-</div><!-- /.thumb_list -->
-<div class="unit thumb_list">
-	<ul>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/894782fbca0d5d4b22f743abdbecd726.undefined" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
 
-	</ul>
-</div><!-- /.thumb_list -->
-<div class="unit thumb_list">
-	<ul>
+		<li><div class="thumb_list-pad"><a href="http://pickles2.pxt.jp/"><img src="./test1_files/resources/184be8b5850e003055fc894867b60249.undefined" alt="welcome" /><span class="thumb_list-caption">welcome</span></a></div></li>
 
-	</ul>
-</div><!-- /.thumb_list -->
-<div class="unit thumb_list">
-	<ul>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/908cc3105697fb45f523a3a67e3e5cd8.undefined" alt="SVG画像" /><span class="thumb_list-caption">これはSVG画像です</span></a></div></li>
 
-	</ul>
-</div><!-- /.thumb_list -->
-<div class="unit thumb_list">
-	<ul>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/3ddb0727881f406050549e651730401a.undefined" alt="代替テキストなんですよ。" /><span class="thumb_list-caption">キャプション、なんですよ</span></a></div></li>
 
-	</ul>
-</div><!-- /.thumb_list -->
+		<li><div class="thumb_list-pad"><a href="/"><img src="./test1_files/resources/a6f17df4e428b4c65328185f9c9c8e40.undefined" alt="logo svg" /><span class="thumb_list-caption">SVGファイルです</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
@@ -93,21 +75,71 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div class="unit">
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
-<p>loopフィールドの多階層処理のテスト用モジュール</p>
-<ul>
 
-</ul>
-<p>/loopフィールドの多階層処理のテスト用モジュール</p>
-<p>loopフィールドの多階層処理のテスト用モジュール</p>
-<ul>
+	<li>loop1: <p>テストテキストモジュールー！</p>
 
-</ul>
-<p>/loopフィールドの多階層処理のテスト用モジュール</p>
-<p>loopフィールドの多階層処理のテスト用モジュール</p>
-<ul>
+	<ul>
 
-</ul>
-<p>/loopフィールドの多階層処理のテスト用モジュール</p>
+		<li>loop2: <p>テスト2
+うふろぉぉぉぉ</p>
+
+		<ul>
+
+		<li>loop3:
+			<div><p>だはぁぁぁぁぁ</p>
+</div>
+			<div></div>
+		</li>
+
+		<li>loop3:
+			<div><p>どぉぉぉ</p>
+</div>
+			<div></div>
+		</li>
+
+		</ul>
+		</li>
+
+		<li>loop2: <p>テスト2いいいおおおお</p>
+
+		<ul>
+
+		<li>loop3:
+			<div><p>マークダウンコード。そのままHTMLに変換されます。</p>
+</div>
+			<div></div>
+		</li>
+
+		<li>loop3:
+			<div><p>テスト3ああああ</p>
+</div>
+			<div></div>
+		</li>
+
+		<li>loop3:
+			<div><p>ループして</p>
+</div>
+			<div></div>
+		</li>
+
+		</ul>
+		</li>
+
+	</ul>
+	</li>
+
+	<li>loop1: <p>テキストテキストー！</p>
+
+	<ul>
+
+	</ul>
+	</li>
+
+	<li>loop1: 
+	<ul>
+
+	</ul>
+	</li>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
@@ -117,15 +149,18 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>いいじゃんかよーーーー！</p>
 
 <ul>
-<ul>
 
-</ul>
-<ul>
+<li><p>きたーーーー！</p>
+</li>
 
-</ul>
+<li><p>うぉーーーすばらしいー！！∑(ﾟДﾟ)</p>
 <ul>
-
+<li>markdown書くけどね。</li>
 </ul>
+</li>
+
+<li><p><span>こうしたら？</span></p>
+</li>
 
 </ul>
 
@@ -220,12 +255,16 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <pre><code>var jsonStr = JSON.stringify( {&quot;JSON&quot;:&quot;value&quot;}, null, 1 );
 </code></pre>
 <ul>
-<ul>
 
-</ul>
-<ul>
+<li><p>増えたっていいじゃない？</p>
+</li>
 
+<li><p>PHP必要？</p>
+<ul>
+<li>マークダウンをリスト編集する。</li>
+<li>リストモジュールなのに、さらにリストをネストして編集してるんだからっ。</li>
 </ul>
+</li>
 
 </ul>
 
@@ -261,16 +300,33 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
-<p>loopフィールドの多階層処理のテスト用モジュール</p>
-<ul>
 
-</ul>
-<p>/loopフィールドの多階層処理のテスト用モジュール</p>
-<p>loopフィールドの多階層処理のテスト用モジュール</p>
-<ul>
+	<li>loop1: <p>まーくだうーん</p>
 
-</ul>
-<p>/loopフィールドの多階層処理のテスト用モジュール</p>
+	<ul>
+
+	</ul>
+	</li>
+
+	<li>loop1: <h2 id="md">md</h2>
+
+	<ul>
+
+		<li>loop2: <h2 id="md-layer-2">md layer 2</h2>
+
+		<ul>
+
+		<li>loop3:
+			<div><h2 id="md-layer-3">md layer 3</h2>
+</div>
+			<div>multi text layer 3</div>
+		</li>
+
+		</ul>
+		</li>
+
+	</ul>
+	</li>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
