編集後の再描画、ウィンドウサイズを変更した際の再描画を追加
- だんだんそれらしい感じになってきて嬉しい。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -18,6 +18,9 @@
 <li>list 1</li>
 <li>list 2</li>
 </ul>
+<p>再描画されますか？</p>
+<p>おおおお！！！ｗｗｗ</p>
+<p>再描画の再テスト。</p>
 <h2 id="-">最小構成のモジュールのサンプル</h2>
 
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
@@ -55,7 +58,7 @@
 
 		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/3ddb0727881f406050549e651730401a.undefined" alt="代替テキストなんですよ。" /><span class="thumb_list-caption">キャプション、なんですよ</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="/"><img src="./index_files/resources/a6f17df4e428b4c65328185f9c9c8e40.undefined" alt="logo svg" /><span class="thumb_list-caption">SVGファイルです</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="/"><img src="./index_files/resources/undefined.undefined" alt="logo svg リソースだけ上手く反映されてないですね。" /><span class="thumb_list-caption">SVGファイルです あれ？</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
@@ -71,12 +74,14 @@
 <h2>自分でコーディングする領域</h2>
 <p>HTMLコードを自分で書きます。</p>
 <p>HTMLエンティティ変換もされないので、<strong>自分で書きます</strong>。</p>
-ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。
+ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。<br /><br />スクロール位置は？<br /><br />ちょうどいいじゃないですか。
 
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-宿題宿題。
-宿題やったかー？<br />＼(^o^)／
+<p>宿題宿題。</p>
+
+<p>Yes, 宿題。</p>
+宿題やったかー？<br />＼(^o^)／<br /><br />やってるYo！ ＼(^o^)／
 <p>会社の宿題。</p>
 <p>module はやっぱり、input の1つでは問題がある。不便。</p>
 <p>こいつは直しました。
@@ -118,9 +123,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<ul>
 
 		<li>loop3:
-			<div><p>マークダウンコード。そのままHTMLに変換されます。</p>
+			<div><h2 id="-">なかなかいいと思います。</h2>
+<p>マークダウンコード。そのままHTMLに変換されます。</p>
 </div>
-			<div></div>
+			<div><h3 id="-">すばらしい！</h3>
+<p>どですか？</p>
+</div>
 		</li>
 
 		<li>loop3:
@@ -148,7 +156,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: 
+	<li>loop1: <p>もじれつ書いてみますよ。</p>
+
 	<ul>
 
 	</ul>
@@ -199,7 +208,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<p>まぁ、このあたりは、上手い人にお願いしちゃお。</p>
+<p>したーーーのほうも再描画テスト。</p>
 
 
 	</div></div>
@@ -367,7 +376,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
+<h2 id="-">ふたつめのコンテンツエリア</h2>
 
+<p>いい感じになってきたと思います。</p>
 
 
 	</div></div>
