ドラッグ＆ドロップによる追加と移動の操作ができるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -13,6 +13,10 @@
         <div class="contents" data-contents="main">
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
+<h2 id="-">最小構成のモジュールのサンプル</h2>
+
+<h2 id="-">まるちテキストを追加してみました。</h2>
+
 <h2 id="markdown-">Markdownフィールド</h2>
 <ul>
 <li>list 1</li>
@@ -21,8 +25,6 @@
 <p>再描画されますか？</p>
 <p>おおおお！！！ｗｗｗ</p>
 <p>再描画の再テスト。</p>
-<h2 id="-">最小構成のモジュールのサンプル</h2>
-
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
@@ -149,14 +151,14 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li>loop1: <p>テキストテキストー！</p>
+	<li>loop1: <p>もじれつ書いてみますよ。</p>
 
 	<ul>
 
 	</ul>
 	</li>
 
-	<li>loop1: <p>もじれつ書いてみますよ。</p>
+	<li>loop1: <p>テキストテキストー！</p>
 
 	<ul>
 
