フィールド拡張機能 options.customFields を追加
- これで、フィールド編集の機能をプラグイン化することが可能になる想定。
- href は簡素化させた。候補の表示はしない。これは利用側のフレームワークの仕様によるので、プラグイン側に実装してもらうことにする。
- 同じく、table, および WYSIWYG 系のフィールドも、プラグイン化したい。(このコミットではまだしてない)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -382,6 +382,11 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <p>いい感じになってきたと思います。</p>
 
+<div>
+    <p>custom1 field</p>
+<div style="background-color:#993; color:#fff; padding:1em;">カスタムフィールドを追加してみました。</div>
+    <p>/custom1 field</p>
+</div>
 
 	</div></div>
 </div><!-- / .cols -->
