module と loop フィールドで、fields が未定義だった場合に異常終了する問題を修正。

--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -1,3 +1,6 @@
+<div class="unit">
+
+<!-- /.unit --></div>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="markdown-">Markdownフィールド</h2>
