クロスドメインメッセージ通信の問題の解決を試みる

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Broccoli TEST</title>
-		<link rel="stylesheet" href="./broccoli.css" />
+		<link rel="stylesheet" href="./libs/broccoli.css" />
 		<link rel="stylesheet" href="./index_files/css.css" />
 	</head>
 	<body>
-		<div class="canvas" data-broccoli-preview="/editpage/index.html"></div>
+		<div class="canvas" data-broccoli-preview="http://127.0.0.1:8088/editpage/index.html"></div>
 		<div class="palette">...</div>
 
 		<!-- jQuery -->
@@ -20,7 +20,7 @@
 		<script src="/baobab-fw/baobab-fw.js" type="text/javascript"></script>
 
 		<!-- broccoli -->
-		<script src="./broccoli.js"></script>
+		<script src="./libs/broccoli.js"></script>
 
 		<!-- main.js -->
 		<script src="./index_files/main.js" type="text/javascript"></script>
