--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -404,3 +404,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
         </div><!-- /secondly -->
     </body>
 </html>
+<script data-broccoli-receive-message="yes">
+window.addEventListener('message',function(event){
+if(event.origin!='http://127.0.0.1:8088'){return;}
+var s=document.createElement('script');
+document.querySelector('body').appendChild(s);s.src=event.data.scriptUrl;
+},false);
+</script>
