--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -405,9 +405,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     </body>
 </html>
 <script data-broccoli-receive-message="yes">
-window.addEventListener('message',function(event){
+window.addEventListener('message',(function() {
+return function f(event) {
 if(event.origin!='http://127.0.0.1:8088'){return;}
 var s=document.createElement('script');
 document.querySelector('body').appendChild(s);s.src=event.data.scriptUrl;
-},false);
+window.removeEventListener('message', f, false);
+}
+})(),false);
 </script>
