--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -407,7 +407,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <script data-broccoli-receive-message="yes">
 window.addEventListener('message',(function() {
 return function f(event) {
-if(event.origin!='http://127.0.0.1:8088'){return;}
+if(event.origin!='http://127.0.0.1:8088'){return;}// <- check your own server's origin.
 var s=document.createElement('script');
 document.querySelector('body').appendChild(s);s.src=event.data.scriptUrl;
 window.removeEventListener('message', f, false);
