resourceMgr: 新規リソースの追加を実装 addResource

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -13,7 +13,8 @@
         <div class="contents" data-contents="main">
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-">最小構成のモジュールのサンプル</h2>
+
+<img src="./index_files/resources/otosan.png" alt="" /><h2 id="-">最小構成のモジュールのサンプル</h2>
 
 <h2 id="-">まるちテキストを追加してみました。</h2>
 
@@ -50,9 +51,9 @@
 <div class="unit thumb_list">
 	<ul>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./index_files/resources/ea3610c827341dafa4820ac9b168659c.undefined" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/i-love-coffee.png" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/894782fbca0d5d4b22f743abdbecd726.undefined" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./index_files/resources/i-love-md8.png" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
 
 		<li><div class="thumb_list-pad"><a href="http://pickles2.pxt.jp/"><img src="./index_files/resources/184be8b5850e003055fc894867b60249.undefined" alt="welcome" /><span class="thumb_list-caption">welcome</span></a></div></li>
 
@@ -114,7 +115,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>どぉぉぉ</p>
 </div>
-			<div></div>
+			<div><p>undefined</p>
+</div>
 		</li>
 
 		</ul>
@@ -256,7 +258,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 
 <a href="/plans/gui_spec/"><img src="./index_files/resources/father.png" alt="テスト" /></a>
-<img src="./index_files/resources/a70f514b03f4ccf52c12cc073d2e4c78.png" alt="pxt logo" /><p>マークダウン。</p>
+<img src="./index_files/resources/everyone.png" alt="pxt logo" /><p>マークダウン。</p>
 
 
 	</div></div>
