Twigテンプレートでmoduleフィールドを使えるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -23,9 +23,7 @@
 <li>list 1</li>
 <li>list 2</li>
 </ul>
-<p>再描画されますか？</p>
-<p>おおおお！！！ｗｗｗ</p>
-<p>再描画の再テスト。</p>
+<p>再描画されます。</p>
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
@@ -107,8 +105,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>どぉぉぉ</p>
 </div>
-			<div><p>undefined</p>
-</div>
+			<div></div>
 		</li>
 
 		</ul>
