ビルトインアンカーフィールド、ビルトインDECフィールド を追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -14,7 +14,7 @@
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 
-<img src="./index_files/resources/otosan.png" alt="" /><h2 id="-">最小構成のモジュールのサンプル</h2>
+<img src="./index_files/resources/otosan.png" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
 
 <h2 id="-">まるちテキストを追加してみました。</h2>
 
