パネル選択時のモジュール名表示 追加

--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -1,7 +1,7 @@
-<div class="unit">
+<div class="unit" data-dec="あああああああ">
 
 <!-- /.unit --></div>
-<div class="cols unit">
+<div class="cols unit" data-dec="あああああああ">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="markdown-">Markdownフィールド</h2>
 <ul>
