ドラッグ＆ドロップ操作時の追加・移動先を示すガイド機能を追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -24,6 +24,7 @@
 <li>list 2</li>
 </ul>
 <p>再描画されます。</p>
+<p>再描画されました。</p>
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
@@ -67,6 +68,8 @@
 <h2>自分でコーディングする領域</h2>
 <p>HTMLコードを自分で書きます。</p>
 <p>HTMLエンティティ変換もされないので、<strong>自分で書きます</strong>。</p>
+<div style="background:#ddd; height:1200px;">
+</div>
 ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。<br /><br />スクロール位置は？<br /><br />ちょうどいいじゃないですか。
 
 	</div></div>
