--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -7,8 +7,10 @@
 		<link rel="stylesheet" href="./index_files/css.css" />
 	</head>
 	<body>
+		<div class="instanceTreeView">...</div>
 		<div class="canvas" data-broccoli-preview="http://127.0.0.1:8088/editpage/index.html"></div>
 		<div class="palette">...</div>
+		<div class="instancePathView">...</div>
 
 		<!-- jQuery -->
 		<script src="./index_files/jquery-1.11.1.min.js" type="text/javascript"></script>
