editWindow: endifがEditWindow上でundefinedとして表示されることがある問題を修正

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -11,7 +11,11 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
-<div class="cols unit">
+
+<div class="aside_box">
+
+	
+</div><!-- /.aside_box --><div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 
 <img src="./index_files/resources/otosan.png" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
