loopフィールドのサブモジュール内にmoduleフィールドを入れると異常終了する不具合を修正

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -11,6 +11,30 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<p>loopフィールドの中にmoduleフィールド</p>
+<ul>
+
+	<li>loop1
+	<ul>
+
+		<li>loop2
+		<ul>
+
+		<li>loop3:
+			<div><h2 id="multitext-field-">multitext field.</h2>
+<p>multitext.</p>
+</div>
+			<div></div>
+		</li>
+
+		</ul>
+		</li>
+
+	</ul>
+	</li>
+
+</ul>
+<p>/loopフィールドの中にmoduleフィールド</p>
 
 <div class="aside_box">
 
