resourceMGR: リソースが未登録の場合のファイル名が、noname.unknown になるようにした。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -24,7 +24,8 @@
 			<div><h2 id="multitext-field-">multitext field.</h2>
 <p>multitext.</p>
 </div>
-			<div></div>
+			<div>
+</div>
 		</li>
 
 		</ul>
