broccoli.copy(), broccoli.paste() を追加

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -13,9 +13,10 @@
 		<div class="instancePathView">...</div>
 		<div>
 			<ul>
-				<li><a href="javascript:console.log(window.main.broccoli);">broccoli</a></li>
 				<li><a href="javascript:window.main.broccoli.historyBack(function(){alert('history Back done.');});">history Back</a></li>
 				<li><a href="javascript:window.main.broccoli.historyGo(function(){alert('history Go done.');});">history Go</a></li>
+				<li><a href="javascript:window.main.broccoli.copy(function(){alert('copy done.');});">copy</a></li>
+				<li><a href="javascript:window.main.broccoli.paste(function(){alert('paste done.');});">paste</a></li>
 			</ul>
 		</div>
 
