broccoli.remove() を追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -24,9 +24,7 @@
 			<div><h2 id="multitext-field-">multitext field.</h2>
 <p>multitext.</p>
 </div>
-			<div><h2 id="history-3">history 3</h2>
-
-</div>
+			<div></div>
 		</li>
 
 		</ul>
@@ -37,11 +35,7 @@
 
 </ul>
 <p>/loopフィールドの中にmoduleフィールド</p>
-
-<div class="aside_box">
-
-	
-</div><!-- /.aside_box --><div class="cols unit">
+<div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 
 <img src="./index_files/resources/otosan.png" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
