--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -17,6 +17,7 @@
 				<li><a href="javascript:window.main.broccoli.historyGo(function(){alert('history Go done.');});">history Go</a></li>
 				<li><a href="javascript:window.main.broccoli.copy(function(){alert('copy done.');});">copy</a></li>
 				<li><a href="javascript:window.main.broccoli.paste(function(){alert('paste done.');});">paste</a></li>
+				<li><a href="javascript:window.main.broccoli.remove(function(){alert('remove done.');});">remove</a></li>
 			</ul>
 		</div>
 
