(テストデータ追加: floatするloopフィールドを含むモジュール)

--- a/tests/testdata/htdocs/test1/test1.canvas.html
+++ b/tests/testdata/htdocs/test1/test1.canvas.html
@@ -294,11 +294,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</div></div>
 </div><!-- / .cols -->
 <div data-broccoli-instance-path="/fields.main@13" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/html" data-dec="編集者コメント欄です。"><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてHTMLコードを編集してください)</span>
-</div><div data-broccoli-instance-path="/fields.main@14" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/wysiwig_tinymce"><p>やっぱこっちのエディタの方が使いやすそうに見える。</p>
-<p>さっき、一瞬、影が見えたような気が・・・(汗)(汗)</p>
-<ul>
-<li>きの、せい、かな？</li>
-</ul></div><div data-broccoli-instance-path="/fields.main@15" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Markdown"><h2 id="-">あれ。</h2>
+</div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@14" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/unknown">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<div data-broccoli-instance-path="/fields.main@15" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Markdown"><h2 id="-">あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
 
 </div><div data-broccoli-instance-path="/fields.main@16" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop"><p>loopフィールドの多階層処理のテスト用モジュール</p>
