--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -241,6 +241,26 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
 
+<div class="dev-float-loop">
+	<ul>
+
+		<li><p>選択できなければ、編集できません。</p>
+</li>
+
+		<li><p>ドラッグ＆ドロップで移動させる操作もできるべきです。</p>
+</li>
+
+		<li><p>領域が重なって表示されるなどの問題があるならば、修正が必要です。</p>
+</li>
+
+		<li><p>floatされた要素をloopするテストです。</p>
+</li>
+
+		<li><p>それぞれの要素を編集できるでしょうか？</p>
+</li>
+
+	</ul>
+</div><!-- /.thumb_list -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-">長いページを作るテスト</h2>
@@ -320,11 +340,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</div></div>
 </div><!-- / .cols -->
 
-<p>やっぱこっちのエディタの方が使いやすそうに見える。</p>
-<p>さっき、一瞬、影が見えたような気が・・・(汗)(汗)</p>
-<ul>
-<li>きの、せい、かな？</li>
-</ul><h2 id="-">あれ。</h2>
+<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<h2 id="-">あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
 
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
