--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -294,11 +294,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</div></div>
 </div><!-- / .cols -->
 
-<p>やっぱこっちのエディタの方が使いやすそうに見える。</p>
-<p>さっき、一瞬、影が見えたような気が・・・(汗)(汗)</p>
-<ul>
-<li>きの、せい、かな？</li>
-</ul><h2 id="-">あれ。</h2>
+<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<h2 id="-">あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
 
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
