モジュールCSS、モジュールJSのビルド機能(のための下地づくり)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <title>sample page</title>
         <link rel="stylesheet" href="/common/css/common.css" />
+        <link rel="stylesheet" href="/common/css/module.css" />
+        <script src="/common/js/module.js"></script>
         <style media="screen">
             img{max-width:100%;}
         </style>
