モジュールCSSビルド機能実装(未完成)

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -24,10 +24,18 @@
 <p>/loopフィールドの中にmoduleフィールド</p>
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
+<h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
+<pre><code>{$idx}:{$dir}/{$name}
+</code></pre>
 
 <img src="./test1_files/resources/b949e7429bdfed6bd195a89f69fd2c13.unknown" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
 
-<h2 id="-">まるちテキストを追加してみました。</h2>
+
+	</div></div>
+	<div class="cols-col cols-1of3"><div class="cols-pad">
+<h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
+<p><code>px-files/px2dtconfig.json</code> に定義する。
+あああああ</p>
 
 <h2 id="markdown-">Markdownフィールド</h2>
 <ul>
@@ -36,16 +44,6 @@
 </ul>
 <p>再描画されます。</p>
 <p>再描画されました。</p>
-<h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
-<pre><code>{$idx}:{$dir}/{$name}
-</code></pre>
-
-	</div></div>
-	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
-<p><code>px-files/px2dtconfig.json</code> に定義する。
-あああああ</p>
-
 
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
@@ -55,15 +53,17 @@
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
 
+<h2 id="-">まるちテキストを追加してみました。</h2>
+
 
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit thumb_list">
 	<ul>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./test1_files/resources/060cc839a391baf81779188e7dfa553d.unknown" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
-
 		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/fe97281abfb0badd97668226cb50b6f3.unknown" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
+
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./test1_files/resources/060cc839a391baf81779188e7dfa553d.unknown" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
@@ -247,6 +247,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li><p>選択できなければ、編集できません。</p>
 </li>
 
+		<li><p>リストの順番をドラッグ＆ドロップで入れ替えられます。</p>
+</li>
+
 		<li><p>ドラッグ＆ドロップで移動させる操作もできるべきです。</p>
 </li>
 
@@ -257,6 +260,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </li>
 
 		<li><p>それぞれの要素を編集できるでしょうか？</p>
+</li>
+
+		<li><p>要素を増やすには、loopフィールドのappenderをダブルクリックします。</p>
 </li>
 
 	</ul>
