モジュールのJavaScriptビルド機能実装

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -398,6 +398,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
+<div>
+    <p><a href="javascript:module_js();return false;">module_js</a></p>
+</div>
 
 <div class="attention_box">
 
