--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -382,6 +382,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
+<div>
+    <p><a href="javascript:module_js();">module_js</a></p>
+</div>
 
 <div class="attention_box">
 
