canvasモードのビルド式で、isSingleRootElement の判断ロジックを改善

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -385,6 +385,30 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div>
     <p><a href="javascript:module_js();">module_js</a></p>
 </div>
+<div class="single-root-element clearfix">
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
+</div>
 
 <div class="attention_box">
 
