--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -399,7 +399,31 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
 <div>
-    <p><a href="javascript:module_js();return false;">module_js</a></p>
+    <p><a href="javascript:module_js();">module_js</a></p>
+</div>
+<div class="single-root-element clearfix">
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
+
+
+
+<div class="single-root-element--element">
+<p>isSingleRootElement が false になってはいけないパターン</p>
+</div>
+
 </div>
 
 <div class="attention_box">
