モジュールの finalize.js 機能を追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -341,7 +341,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 	</div></div>
 </div><!-- / .cols -->
-<div class="cols unit">
+<p class="finalized" style="color: #f00;">finalized</p><div>
+    <p>custom1 field</p>
+<div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>
+    <p>/custom1 field</p>
+</div>
+<p class="finalized" style="color: #00f;">finalized</p><div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h3 id="-">ね。遊んでくればいいじゃんか</h3>
 
@@ -363,9 +368,6 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 
 <div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
-<h2 id="-">あれ。</h2>
-<p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
-
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
@@ -453,12 +455,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <p>いい感じになってきたと思います。</p>
 
-<div>
+<p class="finalized" style="color: #f00;">finalized</p><div>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">カスタムフィールドを追加してみました。</div>
     <p>/custom1 field</p>
 </div>
-
+<p class="finalized" style="color: #00f;">finalized</p>
 	</div></div>
 </div><!-- / .cols -->
 
