inputフィールドに default オプションを追加

--- a/tests/testdata/modules1/dev/multitext/template.html
+++ b/tests/testdata/modules1/dev/multitext/template.html
@@ -1,1 +1,4 @@
-{&{"input":{"type":"multitext","name":"main"}}&}
+{&{"input":{"type":"multitext","name":"main","default":{
+ "src": "## デフォルトの値\n\nここを編集してください。",
+ "editor": "markdown"
+}}}&}
