description で markdown 記法が使えるようになった。＆ 全 input, module, loop フィールドに自動的に表示されるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -14,6 +14,31 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="twig_template">
+<h2></h2>
+
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-loop">
+
+object(0) {
+}
+
+
+</div>
+
+
+</div>
+<h2 id="-">デフォルトの値</h2>
+<p>ここを編集してください。</p>
+
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
@@ -346,28 +371,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>
     <p>/custom1 field</p>
 </div>
-<p class="finalized" style="color: #00f;">finalized</p><div class="cols unit">
-	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">ね。遊んでくればいいじゃんか</h3>
-
-
-	</div></div>
-	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">どうなってんだー</h3>
-<p>なかなか再現しないなぁ。</p>
-<p>高さが増えるイベントが起きた直後に、スクロールバーの分座標がずれるっぽい。</p>
-
-
-	</div></div>
-	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<h3 id="-">処理の順番間違ってるかな？</h3>
-<p>復旧したっ。</p>
-
-
-	</div></div>
-</div><!-- / .cols -->
-
-<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
@@ -410,6 +414,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>markdown</p>
+
 </div>
 
 
@@ -417,6 +423,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>markdown</p>
+
 </div>
 
 
@@ -424,6 +432,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>md</p>
+
 </div>
 
 </div>
@@ -448,11 +458,11 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <!-- /.unit --></div>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
+<h2 id="-">ふたつめのコンテンツエリア</h2>
+
 
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
-<h2 id="-">ふたつめのコンテンツエリア</h2>
-
 <p>いい感じになってきたと思います。</p>
 
 <p class="finalized" style="color: #f00;">finalized</p><div>
