--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,3 +1,28 @@
+<div class="twig_template">
+<h2></h2>
+
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-loop">
+
+object(0) {
+}
+
+
+</div>
+
+
+</div>
+<h2 id="-">デフォルトの値</h2>
+<p>ここを編集してください。</p>
+
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
@@ -330,28 +355,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 あれ？
     <p>/custom1 field</p>
 </div>
-<p class="finalized" style="color: #00f;">finalized</p><div class="cols unit">
-	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">ね。遊んでくればいいじゃんか</h3>
-
-
-	</div></div>
-	<div class="cols-col cols-1of3"><div class="cols-pad">
-<h3 id="-">どうなってんだー</h3>
-<p>なかなか再現しないなぁ。</p>
-<p>高さが増えるイベントが起きた直後に、スクロールバーの分座標がずれるっぽい。</p>
-
-
-	</div></div>
-	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-<h3 id="-">処理の順番間違ってるかな？</h3>
-<p>復旧したっ。</p>
-
-
-	</div></div>
-</div><!-- / .cols -->
-
-<div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+<p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
@@ -394,6 +398,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>markdown</p>
+
 </div>
 
 
@@ -401,6 +407,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>markdown</p>
+
 </div>
 
 
@@ -408,6 +416,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
+<p>md</p>
+
 </div>
 
 </div>
