--- a/tests/testdata/modules1/units/cols2/template.html
+++ b/tests/testdata/modules1/units/cols2/template.html
@@ -1,8 +1,8 @@
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
-{&{"module":{"allow":["parts/*","units/*","boxes/*"], "name":"column1"}}&}
+{&{"module":{"allow":["parts/*","units/*","boxes/*"], "name":"column1","description":"説明欄は、moduleフィールドにもつけられます。"}}&}
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
-{&{"module":{"allow":["parts/*","units/*","boxes/*"], "name":"column2"}}&}
+{&{"module":{"allow":["parts/*","units/*","boxes/*"], "name":"column2","description":"説明欄は、moduleフィールドにもつけられます。"}}&}
 	</div></div>
 </div><!-- / .cols -->
