--- a/tests/testdata/modules1/dev/custom1/template.html
+++ b/tests/testdata/modules1/dev/custom1/template.html
@@ -1,5 +1,5 @@
 <div>
     <p>custom1 field</p>
-{&{"input":{"type":"custom1","name":"main"}}&}
+{&{"input":{"type":"custom1","name":"main","description":"これはカスタムフィールドです。\n\nカスタムフィールドは、broccoli-html-editor の初期化時に設定して、追加することができます。"}}&}
     <p>/custom1 field</p>
 </div>
